--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ subjects:
 - !lcsh 'Child soldiers -- Juvenile fiction'
 - !lcsh 'Conduct of life -- Juvenile fiction'
 - !lcsh 'Soldiers -- Juvenile fiction'
+- GITenberg
 title: The History of Little Jack, a Foundling
 url: http://www.gutenberg.org/ebooks/42805
